--- a/templates/sources.html
+++ b/templates/sources.html
@@ -23,7 +23,7 @@
                     <p>Webframeworks: <a href="http://flask.pocoo.org/" target="_blank"> <span class="footerlink">Flask</span></a>, <a href="https://getbootstrap.com/" target="_blank"> <span class="footerlink">Bootstrap 4</span></a></p>
                     <p>Informationen über Orbitalparameter: <a href="https://nssdc.gsfc.nasa.gov/planetary/factsheet/" target="_blank"> <span class="footerlink">NASA Planetary Fact Sheets</span></a> </p>
                     <p>Hilfe beim Berechnen der Maximalen und Minimalen Erddistanzen aus Aphel und Perihel: <a href="https://twitter.com/_monotom/status/867446393220104192" target="_blank"> <span class="footerlink">Florian Freistetter‏</span></a></p>
-                    <p><a href="https://twitter.com/_monotom/status/867446393220104192" target="_blank"> <span class="footerlink">GitHub Repository</span></a></p>
+                    <p><a href="https://github.com/Monotom89/HowFarIsMars" target="_blank"> <span class="footerlink">GitHub Repository</span></a></p>
                     <a href=".."><i class="fa fa-long-arrow-left fa-2x" aria-hidden="true"></i></a>
 
 
